--- a/resources/http/index.html
+++ b/resources/http/index.html
@@ -15,6 +15,8 @@
     <h2><a href="/note">Уведомления</a></h2>
 
     <h2><a href="/content">Content</a></h2>
+
+    <h2><a href="/log">Лог</a></h2>
 </body>
 
 </html>
